# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
#
# prebuild
#
# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
configure_file(
    "${PROJECT_SOURCE_DIR}/cmake/CMakeOpcUaStack.txt.in"
    "${PROJECT_BINARY_DIR}/CMakeOpcUaStack.txt"
)


# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
#
# install
# 
# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
install(
    FILES "${PROJECT_BINARY_DIR}/CMakeOpcUaStack.txt" 
    DESTINATION /usr/share/cmake/OpcUaStack${VERSION_MAJOR}
    COMPONENT tools
)
